rearranged onionshare_gui files, made it work better with packaging

--- a/onionshare_gui/html/style.css
+++ b/onionshare_gui/html/style.css
@@ -25,7 +25,7 @@ h1 .skull {
     background-color: #ffffff;
     display: none;
 }
-#url-header {
+#give-this-url {
     font-size: 14px;
     margin-bottom: 10px;
     font-family: sans-serif;
