--- a/onionshare_gui/html/style.css
+++ b/onionshare_gui/html/style.css
@@ -1,45 +1,77 @@
 body {
-    background-color: #222222;
-    color: #aaffaa;
-    font-family: monospace;
-    width: 600px;
-    height: 500px;
-    margin: 0 auto;
-    padding: 0;
-}
-h1 {
-    background-color: #FFC4D5;
-    color: #000000;
-    text-align: center;
-    font-size: 30px;
-    margin: 0;
-    padding: 10px;
-    font-family: sans-serif;
-}
-h1 .skull {
-    font-size: 40px;
-    font-weight: bold;
-    color: #FF0048;
-}
-#url-wrapper {
-    padding: 10px;
-    background-color: #ffffff;
-    display: none;
-}
-#give-this-url {
-    font-size: 14px;
-    margin-bottom: 10px;
-    font-family: sans-serif;
-    color: #666666;
-}
-#url {
-    word-wrap: break-word;
-    font-size: 25px;
-    color: #000000;
-}
-#output {
-    padding: 10px;
-    word-wrap: break-word;
-    overflow: auto;
+  background-color: #ffffff;
+  color: #000000;
+  font-family: arial;
+  width: 650px;
+  height: 300px;
+  margin: 0 auto;
+  padding: 0;
 }
 
+h1 {
+  background-color: #222222;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  margin: 0;
+  padding: 10px;
+  height: 20px;
+}
+
+p {
+  padding: 0;
+  margin: 0 0 .3em 0;
+}
+
+#output {
+  padding: 10px;
+  word-wrap: break-word;
+  height: 260px;
+  overflow: auto;
+}
+
+.button {
+  -moz-box-shadow:inset 0px 1px 0px 0px #f29c93;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #f29c93;
+  box-shadow:inset 0px 1px 0px 0px #f29c93;
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100) );
+  background:-moz-linear-gradient( center top, #fe1a00 5%, #ce0100 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe1a00', endColorstr='#ce0100');
+  background-color:#fe1a00;
+  -webkit-border-top-left-radius:0px;
+  -moz-border-radius-topleft:0px;
+  border-top-left-radius:0px;
+  -webkit-border-top-right-radius:0px;
+  -moz-border-radius-topright:0px;
+  border-top-right-radius:0px;
+  -webkit-border-bottom-right-radius:0px;
+  -moz-border-radius-bottomright:0px;
+  border-bottom-right-radius:0px;
+  -webkit-border-bottom-left-radius:0px;
+  -moz-border-radius-bottomleft:0px;
+  border-bottom-left-radius:0px;
+  text-indent:0;
+  border:1px solid #d83526;
+  display:inline-block;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:13px;
+  font-weight:bold;
+  font-style:normal;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #b23e35;
+}
+.button:hover {
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ce0100), color-stop(1, #fe1a00) );
+  background:-moz-linear-gradient( center top, #ce0100 5%, #fe1a00 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ce0100', endColorstr='#fe1a00');
+  background-color:#ce0100;
+}
+
+#copy-button {
+  display: none;
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
+}
