added progress download progress notifications (#36)

--- a/onionshare_gui/templates/index.html
+++ b/onionshare_gui/templates/index.html
@@ -29,6 +29,7 @@
       </ul>
     </ul>
     <script src="static/jquery-1.11.1.min.js"></script>
+    <script src="static/helpers.js"></script>
     <script src="static/onionshare.js"></script>
   </body>
 </html>
