--- a/onionshare_gui/static/style.css
+++ b/onionshare_gui/static/style.css
@@ -69,6 +69,9 @@ ul#log .weblog {
   color: #009900;
   font-weight: bold;
 }
+ul#log .weblog .progress {
+  color: #0000cc;
+}
 
 ul#log .weblog-error {
   color: #ff0000;
