--- a/onionshare_gui/templates/index.html
+++ b/onionshare_gui/templates/index.html
@@ -16,6 +16,10 @@
           <span class="label"></span>
           <span class="value"></span>
         </div>
+        <div id="close-on-finish-wrapper">
+          <input type="checkbox" id="close-on-finish" name="close-on-finish" checked />
+          <label for="close-on-finish"></span>
+        </div>
         <div id="button-wrapper">
           <button class="button" id="copy-button">Copy URL</button>
         </div>
