--- a/onionshare_gui/templates/index.html
+++ b/onionshare_gui/templates/index.html
@@ -35,7 +35,7 @@
         <div id="copy-button-wrapper">
           <button class="button" id="copy-button">Copy URL</button>
         </div>
-
+        <div class="clear"></div>
       </div>
     </ul>
 
