--- a/onionshare_gui/static/style.css
+++ b/onionshare_gui/static/style.css
@@ -1,7 +1,3 @@
-html, body {
-  height: 100%;
-}
-
 body {
   color: #000000;
   font-family: arial;
@@ -10,11 +6,10 @@ body {
   background-color: #f0f0f0;
   min-width: 550px;
   min-height: 300px;
+  overflow: hidden;
 }
 
 #wrapper {
-  position: relative;
-  height: 100%;
 }
 
 #header {
@@ -65,6 +60,7 @@ ul#log {
   word-wrap: break-word;
   font-family: monospace;
   border-bottom: 1px solid #000000;
+  width: 100%;
 }
 ul#log li {
   margin: 0 10px;
@@ -100,7 +96,7 @@ ul#log #close-countdown {
 }
 
 #footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   height: 20px;
   background-color: #ffffff;
