--- a/onionshare_gui/static/style.css
+++ b/onionshare_gui/static/style.css
@@ -56,6 +56,7 @@ ul#log {
   margin: 0;
   padding: 0;
   list-style: none;
+  height: 258px;
   overflow: auto;
   word-wrap: break-word;
   font-family: arial;
