make auto-close checkbox look better in ubuntu

--- a/onionshare_gui/static/style.css
+++ b/onionshare_gui/static/style.css
@@ -112,10 +112,12 @@ ul#log #close-countdown {
 }
 #footer #close-on-finish-wrapper input {
   cursor: pointer;
+  vertical-align: middle;
 }
 #footer #close-on-finish-wrapper label {
   cursor: pointer;
   font-size: 12px;
+  vertical-align: middle;
 }
 
 #footer #copy-button-wrapper {
