Create separate templates and static folder, and make the web app use both of these. Yay, now we have real static resources

--- a/share/templates/denied.html
+++ b/share/templates/denied.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <title>OnionShare</title>
-      <link href="data:image/x-icon;base64,{{favicon_b64}}" rel="icon" type="image/x-icon" />
+      <link href="/static/favicon.ico" rel="icon" type="image/x-icon" />
       <style>
         body {
           background-color: #222222;
