--- a/share/templates/receive.html
+++ b/share/templates/receive.html
@@ -2,7 +2,7 @@
 <html>
  <head>
     <title>OnionShare</title>
-    <link href="data:image/x-icon;base64,{{favicon_b64}}" rel="icon" type="image/x-icon" />
+    <link href="/static/favicon.ico" rel="icon" type="image/x-icon" />
     <style type="text/css">
     .clearfix:after {
         content: ".";
@@ -97,7 +97,7 @@
   <body>
 
     <header class="clearfix">
-        <img class="logo" src="data:image/png;base64,{{logo_b64}}" title="OnionShare">
+        <img class="logo" src="/static/logo.png" title="OnionShare">
         <h1>OnionShare</h1>
     </header>
 
