--- a/share/templates/send.html
+++ b/share/templates/send.html
@@ -2,7 +2,7 @@
 <html>
  <head>
     <title>OnionShare</title>
-    <link href="data:image/x-icon;base64,{{favicon_b64}}" rel="icon" type="image/x-icon" />
+    <link href="/static/favicon.ico" rel="icon" type="image/x-icon" />
     <style type="text/css">
     .clearfix:after {
         content: ".";
@@ -105,7 +105,7 @@
                 <li><a class="button" href='/{{ slug }}/download'>Download Files</a></li>
             </ul>
         </div>
-        <img class="logo" src="data:image/png;base64,{{logo_b64}}" title="OnionShare">
+        <img class="logo" src="/static/logo.png" title="OnionShare">
         <h1>OnionShare</h1>
     </header>
 
@@ -118,7 +118,7 @@
       {% for info in file_info.dirs %}
       <tr>
         <td>
-          <img width="30" height="30" title="" alt="" src="data:image/png;base64,{{ folder_b64 }}" />
+          <img width="30" height="30" title="" alt="" src="/static/web_folder.png" />
           {{ info.basename }}
         </td>
         <td>{{ info.size_human }}</td>
@@ -128,7 +128,7 @@
       {% for info in file_info.files %}
       <tr>
         <td>
-          <img width="30" height="30" title="" alt="" src="data:image/png;base64,{{ file_b64 }}" />
+          <img width="30" height="30" title="" alt="" src="/static/web_file.png" />
           {{ info.basename }}
         </td>
         <td>{{ info.size_human }}</td>
