Stop using inline css, and reorganize static folder

--- a/share/templates/404.html
+++ b/share/templates/404.html
@@ -2,15 +2,8 @@
 <html>
     <head>
         <title>Error 404</title>
-        <link href="/static/favicon.ico" rel="icon" type="image/x-icon" />
-        <style type="text/css">
-            body {
-                background-color: #FFC4D5;
-                color: #FF0048;
-                text-align: center;
-                font-size: 20em;
-            }
-        </style>
+        <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
+        <link href="/static/css/404.css" rel="stylesheet" type="text/css" />
     </head>
     <body>404</body>
 </html>
