--- a/share/templates/denied.html
+++ b/share/templates/denied.html
@@ -2,16 +2,8 @@
 <html>
   <head>
       <title>OnionShare</title>
-      <link href="/static/favicon.ico" rel="icon" type="image/x-icon" />
-      <style>
-        body {
-          background-color: #222222;
-          color: #ffffff;
-          text-align: center;
-          font-family: sans-serif;
-          padding: 5em 1em;
-        }
-      </style>
+      <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
+      <link href="/static/css/denied.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <p>OnionShare download in progress</p>
