--- a/share/templates/receive.html
+++ b/share/templates/receive.html
@@ -12,5 +12,17 @@
         <h1>OnionShare</h1>
     </header>
 
+    <div class="upload-wrapper">
+      <div class="upload">
+        <p><img class="logo" src="/static/img/logo_large.png" title="OnionShare"></p>
+        <p class="upload-header">Send Files</p>
+        <p class="upload-description">Select the files you want to send, then click "Send Files"...</p>
+        <form method="post" enctype="multipart/form-data" action="/{{ slug }}/">
+           <p><input type="file" multiple /></p>
+           <p><input type="submit" class="button" value="Upload Files" /></p>
+        </form>
+      </div>
+    </div>
+
   </body>
 </html>
