--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -115,3 +115,15 @@ table.file-list td:last-child {
   color: #666666;
   margin: 0 0 20px 0;
 }
+
+ul.flashes {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #cc0000;
+}
+
+ul.flashes li {
+  margin: 0;
+  padding: 10px;
+}
