--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -56,6 +56,20 @@ header .right ul li {
   cursor: pointer;
 }
 
+.close-button {
+  color: #ffffff;
+  background-color: #c90c0c;
+  padding: 10px;
+  border: 0;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-left: 1rem;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
 table.file-list {
   width: 100%;
   margin: 0 auto;
