Display a template after closing the server, and standardize the style of other simple templates

--- a/share/templates/404.html
+++ b/share/templates/404.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Error 404</title>
+        <title>OnionsShare: Error 404</title>
         <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
-        <link href="/static/css/404.css" rel="stylesheet" type="text/css" />
     </head>
-    <body>404</body>
+    <body>
+      <p>Error 404: You probably typed the OnionShare address wrong</p>
+    </body>
 </html>
