--- a/share/templates/closed.html
+++ b/share/templates/closed.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>OnionShare</title>
+      <title>OnionShare is closed</title>
       <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
-    <p>OnionShare download in progress</p>
+    <p>Thank you for using OnionShare</p>
   </body>
 </html>
