--- a/share/templates/404.html
+++ b/share/templates/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>OnionsShare: Error 404</title>
+        <title>OnionShare: Error 404</title>
         <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
     </head>
     <body>
