--- a/share/templates/receive.html
+++ b/share/templates/receive.html
@@ -34,10 +34,10 @@
         </form>
       </div>
     </div>
-
+    {% if receive_allow_receiver_shutdown %}
     <form method="post" action="/{{ slug }}/close">
       <input type="submit" class="close-button" value="I'm Finished Uploading" />
     </form>
-
+    {% endif %}
   </body>
 </html>
