Improve styling of flash() messages by using categories, and style the closed.html. Replace references to 'Uploading' with 'Sending' for consistency

--- a/share/templates/closed.html
+++ b/share/templates/closed.html
@@ -3,8 +3,20 @@
   <head>
       <title>OnionShare is closed</title>
       <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
+      <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <p>Thank you for using OnionShare</p>
+      <header class="clearfix">
+          <img class="logo" src="/static/img/logo.png" title="OnionShare">
+          <h1>OnionShare</h1>
+      </header>
+
+      <div class="closed-wrapper">
+          <div class="closed">
+              <p><img class="logo" src="/static/img/logo_large.png" title="OnionShare"></p>
+              <p class="closed-header">Thank you for using OnionShare</p>
+              <p class="closed-description">You may now close this window.</p>
+	  </div>
+      </div>
   </body>
 </html>
