--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -142,3 +142,53 @@ ul.flashes li {
   margin: 0;
   padding: 10px;
 }
+
+li.error {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #c90c0c;
+  border: 0;
+  border-radius: 5px;
+  text-align: left;
+}
+
+li.info {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #000000;
+  background-color: #a9e26c;
+  border: 0;
+  border-radius: 5px;
+  text-align: left;
+}
+
+.closed-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 400px;
+}
+
+.closed {
+  text-align: center;
+}
+
+.closed img {
+  width: 120px;
+  height: 120px;
+}
+
+.closed .closed-header {
+  font-size: 30px;
+  font-weight: normal;
+  color: #666666;
+  margin: 0 0 10px 0;
+}
+
+.closed .closed-description {
+  color: #666666;
+  margin: 0 0 20px 0;
+}
