Make 404 error page look better, and remove the text that it's probably a typo, because in public mode that isn't necessarily true

--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -172,23 +172,23 @@ li.info {
   min-height: 400px;
 }
 
-.closed {
+.info {
   text-align: center;
 }
 
-.closed img {
+.info img {
   width: 120px;
   height: 120px;
 }
 
-.closed .closed-header {
+.info .info-header {
   font-size: 30px;
   font-weight: normal;
   color: #666666;
   margin: 0 0 10px 0;
 }
 
-.closed .closed-description {
+.info .info-description {
   color: #666666;
   margin: 0 0 20px 0;
 }
