--- a/share/templates/closed.html
+++ b/share/templates/closed.html
@@ -11,11 +11,11 @@
           <h1>OnionShare</h1>
       </header>
 
-      <div class="closed-wrapper">
-          <div class="closed">
+      <div class="info-wrapper">
+          <div class="info">
               <p><img class="logo" src="/static/img/logo_large.png" title="OnionShare"></p>
-              <p class="closed-header">Thank you for using OnionShare</p>
-              <p class="closed-description">You may now close this window.</p>
+              <p class="info-header">Thank you for using OnionShare</p>
+              <p class="info-description">You may now close this window.</p>
 	  </div>
       </div>
   </body>
