--- a/share/templates/send.html
+++ b/share/templates/send.html
@@ -10,18 +10,18 @@
   <body>
 
     <header class="clearfix">
-        <div class="right">
-            <ul>
-                <li>Total size: <strong>{{ filesize_human }}</strong> (compressed)</li>
-		{% if slug %}
-                <li><a class="button" href='/{{ slug }}/download'>Download Files</a></li>
-		{% else %}
-		<li><a class="button" href='/download'>Download Files</a></li>
-                {% endif %}
-            </ul>
-        </div>
-        <img class="logo" src="/static/img/logo.png" title="OnionShare">
-        <h1>OnionShare</h1>
+      <div class="right">
+        <ul>
+          <li>Total size: <strong>{{ filesize_human }}</strong> {% if is_zipped %} (compressed){% endif %}</li>
+          {% if slug %}
+          <li><a class="button" href='/{{ slug }}/download'>Download Files</a></li>
+          {% else %}
+          <li><a class="button" href='/download'>Download Files</a></li>
+          {% endif %}
+        </ul>
+      </div>
+      <img class="logo" src="/static/img/logo.png" title="OnionShare">
+      <h1>OnionShare</h1>
     </header>
 
     <table class="file-list" id="file-list">
