--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -16,7 +16,7 @@ header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   background: #fcfcfc;
   background: -webkit-linear-gradient(top, #fcfcfc 0%, #f2f2f2 100%);
-  padding: 0.8rem;
+  padding: .8rem;
 }
 
 header .logo {
