--- a/share/templates/receive.html
+++ b/share/templates/receive.html
@@ -32,6 +32,15 @@
              {% endwith %}
            </div>
         </form>
+
+        <noscript>
+          <div class="noscript">
+            <strong>Warning:</strong> Due to a bug in Tor Browser and Firefox, if you want to upload
+            a file bigger than 50mb, you must set the Tor Browser security slider to
+            Standard. Otherwise your upload will never finish. If you plan on
+            only uploading small files, your current settings are fine.
+          </div>
+        </noscript>
       </div>
     </div>
     <script src="/static/js/receive.js"></script>
