--- a/share/static/css/style.css
+++ b/share/static/css/style.css
@@ -193,7 +193,7 @@ li.info {
   margin: 0 0 20px 0;
 }
 
-div.noscript {
+div#noscript {
   border: 1px solid #e55454;
   text-align: left;
   color: #e55454;
@@ -201,4 +201,8 @@ div.noscript {
   line-height: 150%;
   max-width: 700px;
   margin: 100px 2em 0 2em;
+}
+
+div#noscript a, div#noscript a:visited {
+  color: #e27f7f;
 }
